force-app/main/default/objects/OrderItem/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <description>티켓 구매 시 배정된 좌석의 열 정보를 기록(티켓 상품에만 사용)</description>
    <inlineHelpText>티켓 구매 시 배정된 좌석의 열 정보를 기록(티켓 상품에만 사용)</inlineHelpText>
    <label>Row</label>
    <length>5</length>
    <type>Text</type>
</CustomField>