force-app/main/default/objects/OrderItem/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <description>티켓 구매 시 배정된 좌석 번호를 기록(티켓 상품에만 사용)</description>
    <inlineHelpText>티켓 구매 시 배정된 좌석 번호를 기록(티켓 상품에만 사용)</inlineHelpText>
    <label>Seat Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>