force-app/main/default/objects/OrderItem/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>티켓 구매 시 배정된 좌석 구역을 기록</description>
    <inlineHelpText>티켓에 배정된 좌석 구역을 선택</inlineHelpText>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1루 내야석</fullName>
            </value>
            <value>
                <fullName>3루 내야석</fullName>
            </value>
            <value>
                <fullName>외야석</fullName>
            </value>
            <value>
                <fullName>프리미엄석</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>