force-app/main/default/objects/OrderItem/fields/Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Status__c</fullName>
    <description>티켓의 현재 양도 상태를 기록</description>
    <inlineHelpText>티켓이 다른 팬에게 양도되었는지 선택</inlineHelpText>
    <label>Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Transferred</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>